--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <head>
 <title>SUSTENTAR</title>
 <meta name="viewport" content="width = 1050, user-scalable = no" />
+<!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> -->
+
+
 <script type="text/javascript" src="./extras/jquery.min.1.7.js"></script>
 <script type="text/javascript" src="./extras/modernizr.2.5.3.min.js"></script>
 <script type="text/javascript" src="./lib/hash.js"></script>
@@ -96,7 +99,7 @@
 				 +54 9 2996-35-5396</a>
 			</li>
 	
-			<li> <a href="https://www.google.com/maps/search/?api=1&query=Dorrego+2486,+Moreno,+Buenos+Aires,+Argentina" target="_blank">
+			<li> <a href="https://www.google.com/maps/search/?api=1&query=San+Martin+195,+Neuquén,+Argentina" target="_blank">
 				<!-- <i class="bi bi-geo-alt" style="color: white; margin-right: 1rem;"></i> -->
 			  San Martin 195, piso 9, oficina 5,Neuquén</a>
 			</li>
@@ -105,17 +108,17 @@
 	</div>
 	<!-- contacto -->
 	<div class="contacto" >
-		<a class="wp" href="https://wa.me/5491151487328" style="display: flex;" target="_blank">
+		<a class="wp" href="https://wa.me/5492996355396" style="display: flex;" target="_blank">
 			<p>Contáctanos por Whatsapp 
 				<!-- <i class="bi bi-whatsapp"></i> -->
 			</p> 
 			<img  src="./img/whatsap.png">
 		</a>
-		<a class="tel" href="tel:+5491151487328" target="_blank">
+		<a class="tel" href="tel:+5492996355396" target="_blank">
 			<p>Puedes llamar y con gusto atenderemos</p>
 			<img  src="./img/llamada.png" >
 		</a>
-		<a  class="cv" href="./download/RC_portafolio.pdf" download="portafolio" target="_blank"> 
+		<a  class="cv" href="./download/sustentar.pdf" download="catálogo" target="_blank"> 
 			<!-- ./download/# -->
 			<p>Puedes descargar el catálogo</p>
 			<img src="./img/cv.png">
@@ -150,7 +153,7 @@
 </div>
 
 
-
+<!-- 
 
 <div class="loading-page">
 
@@ -174,6 +177,11 @@
 
 	</div>
 </div> 
+
+
+
+-->
+
 
 
 
