--- a/index.html
+++ b/index.html
@@ -133,6 +133,12 @@
 
 
 	<div class="capa"></div>
+	<div class="responsive-icons">
+		<a class="r-icon" href="#"><img src="./img/imprimir.png" alt=""></a>
+		<a class="r-icon" href="#"><img src="./img/whatsap.png" alt=""></a>
+		<a class="r-icon" href="#"><img src="./img/email.png" alt=""></a>
+
+	</div>
 	<img id='flechas' class="flechas" src="./img/flechitas_teclado.png" >
 	<!-- botones para pasar pagina -->
 	<div class="container">
