--- a/index.html
+++ b/index.html
@@ -151,6 +151,12 @@
 	</div>
 
 
+	<!-- responsive flechas -->
+	<div class="flechas_responsive">
+		<img class="next-button-responsive" src="./img/flecha_izquierda_responsive.png" alt="">
+		<img class="previous-button-responsive" src="./img/flecha_derecha_responsive.png" alt="">
+	</div>
+
 	<!-- copyright -->
 	<div style="display: flex; flex-direction: column;">
 		
@@ -159,7 +165,7 @@
 </div>
 
 
-
+<!-- 
 
 <div class="loading-page">
 
@@ -183,6 +189,12 @@
 
 	</div>
 </div> 
+
+
+
+
+-->
+
 
 
 
