--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
 
 	<div class="capa"></div>
 	<div class="responsive-icons">
-		<a class="r-icon" href="#"><img src="./img/imprimir.png" alt=""></a>
-		<a class="r-icon" href="#"><img src="./img/whatsap.png" alt=""></a>
-		<a class="r-icon" href="#"><img src="./img/email.png" alt=""></a>
+		<a class="r-icon" href="./download/sustentar.pdf" download="catálogo" target="_blank"><img src="./img/imprimir.png" alt=""></a>
+		<a class="r-icon"  href="https://wa.me/5492996355396" target="_blank"><img src="./img/whatsap.png" alt=""></a>
+		<a class="r-icon" href="mailto:sustentarnqn@gmail.com" target="_blank"><img src="./img/email.png" alt=""></a>
 
 	</div>
 	<img id='flechas' class="flechas" src="./img/flechitas_teclado.png" >
