--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 		<ul style="color: white;">
 			<li>
-				<div class="ciculoColor"></div>
+				<div class="circuloColor"></div>
 			</li>
 			<li >
 				<img class="logoMenu" src="./img/perfil.png" width="100" alt="">
@@ -47,6 +47,17 @@
 
 			<li><p class="myname">SUSTENTAR</p></li>
 			<li><p class="title">DECIDIMOS VIVIR MEJOR</p></li>
+			<div class="redes">
+				<a href="#">
+					<img src="./img/facebook.png" alt="">
+				</a>
+				<a href="#">
+					<img src="./img/instagram.png" alt="">
+				</a>
+				<a href="#">
+					<img src="./img/web.png" alt="">
+				</a>
+			</div>
 			<!-- <li><p class="description">Profesional independiente, especializado en Diseño, Tecnología y Programación</p></li> -->
 			<!-- <li>
 				<p class="hab">Revit</p>
@@ -144,8 +155,7 @@
 	<div class="container">
 		<div class="magazine">
 			<!-- Next button -->
-			<div ignore="1" class="next-button"></div>
-			<!-- Previous button -->
+			<div ignore="1" class="next-button"></div>			<!-- Previous button -->
 			<div ignore="1" class="previous-button"></div>
 		</div>
 	</div>
@@ -164,7 +174,6 @@
 		<p id="copy" style=" z-index: 9; position: absolute; bottom: 0; color: white; left: 50%; transform: translateX(-50%);font-family:sans-serif; font-size: 0.7rem; text-shadow: 1px 2px  black; "> Copyright © 2024 - NIC</p>
 	</div>
 </div>
-
 
 
 <div class="loading-page">
@@ -188,7 +197,9 @@
 		<div class="parrafo">DECIDIMOS VIVIR MEJOR</div>
 
 	</div>
-</div> 
+</div>
+
+
 
 
 
@@ -279,13 +290,13 @@ function loadApp() {
 			*/
 			// Magazine width
 
-			width: 1100,
+			width: 1050,
 			// width: 922,
 			// width: 1400,
 
 			// Magazine height
 
-			height: 600,
+			height: 800,
 
 			// Duration in millisecond
 
@@ -309,7 +320,7 @@ function loadApp() {
 
 			// The number of pages
 
-			pages: 32,
+			pages: 20,
 
 			// Events
 
