--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
 			<li><p class="myname">SUSTENTAR</p></li>
 			<li><p class="title">DECIDIMOS VIVIR MEJOR</p></li>
 			<div class="redes">
-				<a href="#">
+				<a href="https://www.facebook.com/sustentar.arg" target="_blank">
 					<img src="./img/facebook.png" alt="">
 				</a>
-				<a href="#">
+				<a href="https://www.instagram.com/sustentar_arg/" target="_blank">
 					<img src="./img/instagram.png" alt="">
 				</a>
-				<a href="#">
+				<a href="https://www.sustentarnqn.com.ar/" target="_blank"> 
 					<img src="./img/web.png" alt="">
 				</a>
 			</div>
