--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 	<!-- copyright -->
 	<div style="display: flex; flex-direction: column;">
 		
-		<p id="copy" style=" z-index: 9; position: absolute; bottom: 0; color: white; left: 50%; transform: translateX(-50%);font-family:sans-serif; font-size: 0.7rem; text-shadow: 1px 2px  black; "> Copyright © 2024 - NIC</p>
+		<p id="copy" style=" z-index: 9; position: absolute; bottom: 0; color: white; left: 50%; transform: translateX(-50%);font-family:sans-serif; font-size: 0.7rem; text-shadow: 1px 2px  black; "> Copyright © 2024 - SUSTENTAR</p>
 	</div>
 </div>
 
